--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,17 +1,25 @@
 {
     "name": "Laravel Package Tutorial",
-    "short_name": "LPT",
-    "start_url": "/index.php",
+    "short_name": "Kasir",
+    "start_url": "/public",
     "background_color": "#6777ef",
     "description": "Tutorial of Laravel Package",
     "display": "fullscreen",
     "theme_color": "#6777ef",
     "icons": [
         {
-            "src": "logo.png",
+            "src": "/public/logo.png",
             "sizes": "512x512",
             "type": "image/png",
             "purpose": "any maskable"
+        }
+    ],
+    "screenshots": [
+        {
+            "src": "/public/screenshots.png",
+            "sizes": "447x620",
+            "type": "image/png",
+            "form_factor": "narrow"
         }
     ]
 }
